--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     defaults:
       run:
-        working-directory: $SRC_DIR
+        working-directory: ${{ env.SRC_DIR }}
 
     # Sanity Checks
     steps:
@@ -37,7 +37,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     defaults:
       run:
-        working-directory: $SRC_DIR
+        working-directory: ${{ env.SRC_DIR }}
 
     # Test in debug mode
     steps:
@@ -55,7 +55,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     defaults:
       run:
-        working-directory: $SRC_DIR
+        working-directory: ${{ env.SRC_DIR }}
 
     # Test in release mode        
     steps:
@@ -74,7 +74,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     defaults:
       run:
-        working-directory: $SRC_DIR
+        working-directory: ${{ env.SRC_DIR }}
         
     # Extras
     steps:
