Update Rust actions triggers
Only triggers on updates to the Rust folder from now on

add test file for CI triggers

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

add test file for CI triggers -- part 2

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

maybe restore CI pipeline

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

maybe restore CI pipeline

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

more test files

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

more test files

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

more test files

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

more test files

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

more test files

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

more test files

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

fix pathing for CI

Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,14 +1,21 @@
 name: Rust
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+# I unfortunately could not figure out how to get the SRC_DR to work in the
+# paths key
 
 env:
   CARGO_TERM_COLOR: always
-  SRC_DIR: ./xdl_rs
+  SRC_DIR: 'xdl_rs'
+
+on:
+  push:
+    branches: [ "main" ]
+    paths:
+      - "xdl_rs/**"
+  pull_request:
+    branches: [ "main" ]
+    paths:
+      - "xdl_rs/**"
 
 jobs:
   sanity-checks:
