--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -86,6 +86,8 @@ jobs:
     # Extras
     steps:
     - uses: actions/checkout@v3
+    - name: Rust Cache
+      uses: Swatinem/rust-cache@v2.4.0
     - name: Setup
       run: cargo install cargo-tarpaulin cargo-audit # and install dependencies
     - name: Audit
