--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -18,6 +18,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        java: [11,17]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -28,7 +29,7 @@ jobs:
     - uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: 17
+        java-version: ${{ matrix.java }}
         
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
