--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -96,3 +96,42 @@ jobs:
       run: cargo tarpaulin --ignore-tests 
     - name: Format
       run: cargo fmt -- --check
+
+
+  nightly-checks:
+    name: Nightly checks (build, test, Miri) on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      continue-on-error: true
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+    defaults:
+      run:
+        working-directory: ${{ env.SRC_DIR }}
+        
+    # Extras
+    steps:
+    - uses: actions/checkout@v3
+    - name: Rust Cache
+      uses: Swatinem/rust-cache@v2.4.0
+    - name: Install nightly and Miri
+      run: |
+        rustup toolchain install nightly --component miri
+        rustup override set nightly
+    - name: Build (release)
+      run: cargo build --verbose -r
+    - name: Run tests (release)
+      run: cargo test --verbose -r
+    - name: Clean previous
+      run: cargo clean
+    - name: Build (debug)
+      run: cargo build --verbose
+    - name: Run tests (debug)
+      run: cargo test --verbose
+    - name: Clean previous for Miri
+      run: |
+        cargo clean
+        cargo miri setup
+    - name: Run Miri
+      run: cargo miri test
