--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ on:
     branches: [ "main" ]
     paths:
       - "xdl_rs/**"
-  workflow-dispatch:
+  workflow_dispatch:
 
 jobs:
   sanity-checks:
