Add failure point for code coverage
Currently set to 90%

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -99,7 +99,7 @@ jobs:
     - name: Audit
       run: cargo audit
     - name: Coverage
-      run: cargo tarpaulin --ignore-tests 
+      run: cargo tarpaulin --ignore-tests --fail-under 90
     - name: Format
       run: cargo fmt -- --check
 
