--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -99,7 +99,7 @@ jobs:
     - name: Audit
       run: cargo audit
     - name: Coverage
-      run: cargo tarpaulin --ignore-tests --fail-under 90
+      run: cargo tarpaulin --ignore-tests --fail-under 90 --coveralls ${{ secrets.COVERALLS_REPO_TOKEN }}
     - name: Format
       run: cargo fmt -- --check
 
