--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ on:
     paths:
       - "xbf_rs/**"
   schedule:
-    cron: '00 12 * * *'
+    - cron: '00 18 * * *'
   workflow_dispatch:
     inputs:
       reason:
