--- a/xbf_rs/Cargo.toml
+++ b/xbf_rs/Cargo.toml
@@ -2,8 +2,8 @@
 name = "xbf_rs"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A Rust implementation of the XBF format."
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 byteorder = "1"
