--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -84,11 +84,11 @@ jobs:
   
   hygiene-checks:
     name: Hygiene checks (audit, coverage, formatting) on ${{ matrix.os }}
-    needs: sanity-checks
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    needs: [release-tests,debug-tests,nightly-checks]
+    runs-on: ubuntu-latest
+    container:
+      image: xd009642/tarpaulin:develop-nightly
+      options: --security-opt seccomp=unconfined
     defaults:
       run:
         working-directory: ${{ env.SRC_DIR }}
@@ -99,11 +99,11 @@ jobs:
     - name: Rust Cache
       uses: Swatinem/rust-cache@v2.4.0
     - name: Setup
-      run: cargo install cargo-tarpaulin cargo-audit # and install dependencies
+      run: cargo install cargo-audit # and install dependencies
     - name: Audit
       run: cargo audit -D warnings
     - name: Coverage
-      run: cargo tarpaulin --ignore-tests --fail-under 90 --coveralls ${{ secrets.COVERALLS_REPO_TOKEN }}
+      run: cargo tarpaulin --ignore-tests --run-types AllTargets Tests Benchmarks Bins Doctests Examples Lib --fail-under 90 --coveralls ${{ secrets.COVERALLS_REPO_TOKEN }}
     - name: Format
       run: cargo fmt -- --check
 
