--- a/xbf_rs/Cargo.toml
+++ b/xbf_rs/Cargo.toml
@@ -8,3 +8,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 byteorder = "1"
 indexmap = "2.0.0"
+
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
