--- a/xbf_rs/Cargo.toml
+++ b/xbf_rs/Cargo.toml
@@ -10,8 +10,7 @@ byteorder = "1"
 indexmap = "2.0.0"
 
 [dev-dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+anyhow = "1.0"
 
 [features]
 default = ["xbf_threadsafe"]
