added vector of priitive data types though has linker error

--- a/cpp/serde/Makefile
+++ b/cpp/serde/Makefile
@@ -1,2 +1,20 @@
-bin/01serde: serde.cpp rust.hh
-	g++ serde.cpp -o $@ -lboost_serialization
+DEBUG	:= -g
+OPT		:= # -O2
+CXX		:= g++ $(DEBUG) $(OPT)
+
+OBJ	:=	serde.o Buffer.o
+
+bin/01serde: $(OBJ)
+	g++ -g $(OBJ) -o $@ -lboost_serialization
+
+serde.o: serde.cpp metadata.hh Buffer.hh rust.hh
+	$(CXX) -c $<
+
+Buffer.o: Buffer.cpp Buffer.hh rust.hh
+	$(CXX) -c $<
+
+
+
+clean:
+	rm bin/01serde
+	
