--- a/xbf_rs/Cargo.toml
+++ b/xbf_rs/Cargo.toml
@@ -11,9 +11,11 @@ indexmap = "2.0.0"
 
 [dev-dependencies]
 anyhow = "1.0"
+ciborium = "0.2.1"
 csv = "1.2"
 quick-xml = { version = "0.30.0", features = ["serialize"] }
 reqwest = "0.11.18"
+rmp-serde = "1.1"
 serde = { version = "1.0.179", features = ["derive"] }
 serde_json = "1.0.104"
 tokio = { version = "1.29.1", features = ["full"] }
