Re-enable checks monthly
Signed-off-by: ahuston-0 <aliceghuston@gmail.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,9 @@ on:
     branches: ["main"]
     paths:
       - "xbf_rs/**"
-  # schedule:
-  #   - cron: "00 18 * * *"
+  # Re-enabling, but enforcing scans monthly so as to reduce noice
+  schedule:
+     - cron: "00 18 1 * *"
   workflow_dispatch:
     inputs:
       reason:
